<resources>
    <string name="app_name">ARNOApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="splashscreentext">Welcome to the Shelter Volunteer App!</string>
    <string name="stock_image">stock image</string>
    <string name="date_back"><![CDATA[<]]></string>
    <string name="date_month_day">Month Day</string>
    <string name="date_morningtimes">9:00AM-12:00PM</string>
    <string name="date_numvolunteers"># Volunteers</string>
    <string name="date_eveningtime">6:00PM-9:00PM</string>
    <string name="signup_thisday">Sign up for this shift just this day.</string>
    <string name="signup_everyweek">Sign up for this shift every week.</string>
    <string name="signout_thisday">I can\'t make this shift just this day.</string>
    <string name="signout_everyweek">I can\'t make this shift every week.</string>
    <string name="volunter_list">View volunteers signed up for this shift.</string>
    <string name="create_account">Create Account</string>
    <string name="currently_signed_out">Currently Signed Out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In!</string>
    <string name="sign_in1">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="welcome_to_the_animal_rescue_new_orleans_mobile_app">Welcome to the Animal Rescue New Orleans Mobile App!</string>
    <string name="calendar">Calendar</string>
    <string name="sign_out1">Sign Out</string>
    <string name="main_menu">Main Menu</string>
    <string name="account">Account</string>
    <string name="account_options">Account Options</string>
    <string name="animals">Animals</string>
    <string name="animal_gallery">Animal Gallery</string>
    <string name="volunteer_name">Volunteer Name</string>
    <string name="example_date">Example Date</string>
    <string name="sample_number_of_volunteers">Sample number of Volunteers</string>
</resources>
