<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/date_backbutton"
            style="@style/buttonThemeLight"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/date_back"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/date_monthday"
            style="@style/GoldTextTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date_month_day"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="normal|bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/date_morninglayout"
                style="@style/ChangingLayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/date_morningtimes"
                            style="@style/DarkTextTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/date_morningtimes"
                            android:textAlignment="textStart"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/date_morningvolunteers"
                            style="@style/DarkTextTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/date_numvolunteers"
                            android:textSize="24sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/date_mornimg"
                        android:layout_width="100dp"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <Button
                    android:id="@+id/date_thismorningbutton"
                    style="@style/buttonThemeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/signup_thisday"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/date_everymorningbutton"
                    style="@style/buttonThemeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/signup_everyweek"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/date_mornlist"
                    style="@style/buttonThemeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/volunter_list"
                    android:textSize="20sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp" />

            <LinearLayout
                android:id="@+id/date_eveninglayout"
                style="@style/ChangingLayoutTheme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/date_eveningtimes"
                            style="@style/DarkTextTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/date_eveningtime"
                            android:textAlignment="textStart"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/date_eveningvolunteers"
                            style="@style/DarkTextTheme"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/date_numvolunteers"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/date_eveimg"
                        android:layout_width="100dp"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <Button
                    android:id="@+id/date_thiseveningbutton"
                    style="@style/buttonThemeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/signup_thisday"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/date_everyeveningbutton"
                    style="@style/buttonThemeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/signup_everyweek"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/date_evelist"
                    style="@style/buttonThemeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/volunter_list"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>